# OpenGL-Rendering-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  OPENGL_NOTES.txt  Phoesics.sln - Shortcut.lnk  build-run.sh  debug.sh  gitignore.txt  imgui.ini  todo.org
.cache/clangd/index/: Circle.cpp.66EAB5853D607B9A.idx  Circle.h.A33817E54C7C2857.idx  Editor.cpp.3FD2C796704ED2B3.idx  Editor.cpp.9C208F38D73B8630.idx  Editor.h.7565BE8DC8F1E3C6.idx  Editor.h.B2B893B382D1C846.idx  IndexBuffer.cpp.8E71B404BA24A0A0.idx  IndexBuffer.cpp.F531EAC4629825AE.idx  IndexBuffer.h.80111E67508D4DBF.idx  IndexBuffer.h.F343149704E10FFB.idx  Model.cpp.394C2F3136B47F42.idx  Model.cpp.3A1B16980F0B1390.idx  Model.h.3B39D55597B2F9F4.idx  Model.h.5CD894385E2C3008.idx  Mouse.h.702B40AA65CC52E5.idx  Mouse.h.DDE60084C0F6375A.idx  Physics.cpp.01635BBA8DFEBAC5.idx  Physics.cpp.F8233317F897B5E4.idx  Physics.h.22B7393234A6BD5C.idx  Physics.h.4D28634536FEA616.idx  PhysicsObject.cpp.31157ED93BE694F6.idx  PhysicsObject.cpp.8BE3FEC93FF53B77.idx  PhysicsObject.h.3ABB830BEC0EF8DA.idx  PhysicsObject.h.D4B389FD6545D72F.idx  Renderer.cpp.11CF7F79AE9A4658.idx  Renderer.cpp.7933D0791F65AFA8.idx  Renderer.h.122DA932FB7F9692.idx  Renderer.h.98D8650429CC6CFB.idx  Shader.cpp.B51605FB79D6CA04.idx  Shader.cpp.DA7265B6EF04D2A7.idx  Shader.h.9CE97B9602FF43B5.idx  Shader.h.B3E4505AC1262F20.idx  ShapeFactory.cpp.2A0E08BC8878E982.idx  ShapeFactory.cpp.361D1F67AB9B810C.idx  ShapeFactory.h.50C203F69337FA5F.idx  ShapeFactory.h.B519C8A60181A7F1.idx  Texture.cpp.30033B76C51C1708.idx  Texture.cpp.4C12349E29FC254E.idx  Texture.h.17031461275E2DB3.idx  Texture.h.9F74D514F114C110.idx  (+481 more)
models/: SlicerGunWithHandleVersion2.mtl
res/: ThreeBalls.stag  stack.stag  test  test.stag
shaders/: FLATCOLOR.frag  NOLIGHTING.frag  UUID.frag  depth.frag  depth.vert  dos2unix.sh  lighting.frag  lighting.vert  shader.frag  shader.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Circle.cpp  Circle.h  Editor.cpp  Editor.h  IndexBuffer.cpp  IndexBuffer.h  Logger.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Mouse.h  Physics.cpp  Physics.h  PhysicsObject.cpp  PhysicsObject.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShapeFactory.cpp  ShapeFactory.h  Texture.cpp  Texture.h  TextureMap.cpp  TextureMap.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp
textures/: wood-spec.psd
